tests/errors/arguments/variables/const_instead_of_var.src
.IPPcode18
defvar int@8